mentor edit done

--- a/Registration.html
+++ b/Registration.html
@@ -186,53 +186,53 @@
                                         <div class="two-cols">
                                             <label>
                                                 Email address * [can't change]
-                                                <input type="email" name="emailMentor" id="mentorEmail" required
+                                                <input type="email" name="email_Mentor" id="mentorEmail" required
                                                     readonly>
                                             </label>
                                             <label>
                                                 Phone *
-                                                <input type="tel" name="PhoneMentor" required>
+                                                <input type="tel" name="Phone_Mentor" required>
                                             </label>
                                         </div>
                                         <div class="two-cols">
                                             <label>
                                                 State
-                                                <input type="text" name="CitizenshipMentor">
+                                                <input type="text" name="Citizenship_Mentor">
                                             </label>
                                             <label>
                                                 City
-                                                <input type="text" name="CityMentor">
+                                                <input type="text" name="City_Mentor">
                                             </label>
                                         </div>
                                         <div class="two-cols">
 
                                             <label>
                                                 Linkedin URL *
-                                                <input type="text" name="LinkedinURLMentor" required>
+                                                <input type="text" name="LinkedinURL_Mentor" required>
                                             </label>
                                             <label>
                                                 Number of active Months *
-                                                <input type="tel" name="ActiveMonthsMentor" required>
+                                                <input type="tel" name="ActiveMonths_Mentor" required>
                                             </label>
                                         </div>
                                         <label>
                                             Brief about you*
-                                            <input type="text" name="BriefMentor" required>
+                                            <input type="text" name="Brief_Mentor" required>
                                         </label>
                                         <div class="two-cols">
 
                                             <label>
                                                 Industry *
-                                                <input type="text" name="industry" required>
+                                                <input type="text" name="industry_Mentor" required>
                                             </label>
                                             <label>
                                                 Sector *
-                                                <input type="text" name="Sector" required>
+                                                <input type="text" name="Sector_Mentor" required>
                                             </label>
                                         </div>
                                         <label>
                                             Interests *
-                                            <input type="text" name="interests" required>
+                                            <input type="text" name="interests_Mentor" required>
                                         </label>
                                         <label>
                                             Profile Picture
@@ -240,12 +240,12 @@
                                         </label>
                                         <div class="two-cols">
                                             <label for="compnyLogo">Is this Company logo</label>
-                                            <select name="compnyLogo" id="compnyLogo">
+                                            <select name="compnyLogo_Mentor" id="compnyLogo">
                                                 <option value="no">No</option>
                                                 <option value="yes">Yes</option>
                                             </select>
                                             <label for="startupStage">Stage of Startup *</label>
-                                            <select name="startupStage" id="startupStage" required>
+                                            <select name="startupStage_Mentor" id="startupStage" required>
                                                 <option value="ideation">ideation</option>
                                                 <option value="validation">validation</option>
                                                 <option value="early traction">Early Traction</option>
@@ -253,18 +253,18 @@
                                             </select>
                                         </div>
                                         <label for="network">Select your Network *</label>
-                                        <select name="network" id="network" required>
+                                        <select name="network_Mentor" id="network" required>
                                             <option value="tie">TIE</option>
                                             <option value="others">Others</option>
                                         </select>
                                         <div class="two-cols">
                                             <label>
                                                 TIE Email address
-                                                <input type="email" name="tieEmail">
+                                                <input type="email" name="tieEmail_Mentor">
                                             </label>
                                             <label>
                                                 TIE Password
-                                                <input type="text" name="tiePassword">
+                                                <input type="text" name="tiePassword_Mentor">
                                             </label>
                                         </div>
                                         <label> Success Stories (if any) </label>
@@ -272,16 +272,16 @@
 
                                             <label>
                                                 Startup Name
-                                                <input type="text" name="startup Name">
+                                                <input type="text" name="startupName_Mentor">
                                             </label>
                                             <label>
                                                 Startup URL
-                                                <input type="text" name="startup URL">
+                                                <input type="text" name="startupURL_Mentor">
                                             </label>
                                         </div>
                                         <label>
                                             Brief / Tagline
-                                            <input type="text" name="briefTagline">
+                                            <input type="text" name="briefTagline_Mentor">
                                         </label>
 
                                     </fieldset>
