--- a/admin/Edit.html
+++ b/admin/Edit.html
@@ -160,12 +160,11 @@
                                 </div>
                             </form>
 
-                            <form id="ft-form" style="display: none;" class="Mentorform" accept-charset="UTF-8"
-                                enctype="multipart/form-data">
+                            <form id="ft-form" style="display: none;" class="form">
 
 
-                                <fieldset class="d-flex justify-content-around">
-                                    <!-- <h3>Register Yourself as :- </h3> -->
+                                <!-- <fieldset class="d-flex justify-content-around">
+                                  
                                     <div class="two-cols">
 
                                         <label><input type="radio" name="colorRadio" value="red">
@@ -175,7 +174,7 @@
                                             <h5>Startup</h5>
                                         </label>
                                     </div>
-                                </fieldset>
+                                </fieldset> -->
 
                                 <div class="">
                                     <!-- red box -->
@@ -186,53 +185,54 @@
                                         </label>
                                         <div class="two-cols">
                                             <label>
-                                                Email address *
-                                                <input type="email" name="email" required>
+                                                Email address * [can't change]
+                                                <input type="email" name="email_Mentor" id="mentorEmail" required
+                                                    readonly>
                                             </label>
                                             <label>
                                                 Phone *
-                                                <input type="tel" name="Phone" required>
+                                                <input type="tel" name="Phone_Mentor" required>
                                             </label>
                                         </div>
                                         <div class="two-cols">
                                             <label>
                                                 State
-                                                <input type="text" name="Citizenship">
+                                                <input type="text" name="Citizenship_Mentor">
                                             </label>
                                             <label>
                                                 City
-                                                <input type="text" name="City">
+                                                <input type="text" name="City_Mentor">
                                             </label>
                                         </div>
                                         <div class="two-cols">
 
                                             <label>
                                                 Linkedin URL *
-                                                <input type="text" name="Linkedin URL" required>
+                                                <input type="text" name="LinkedinURL_Mentor" required>
                                             </label>
                                             <label>
                                                 Number of active Months *
-                                                <input type="tel" name="activeMonths" required>
+                                                <input type="tel" name="ActiveMonths_Mentor" required>
                                             </label>
                                         </div>
                                         <label>
                                             Brief about you*
-                                            <input type="text" name="Brief" required>
+                                            <input type="text" name="Brief_Mentor" required>
                                         </label>
                                         <div class="two-cols">
 
                                             <label>
                                                 Industry *
-                                                <input type="text" name="industry" required>
+                                                <input type="text" name="industry_Mentor" required>
                                             </label>
                                             <label>
                                                 Sector *
-                                                <input type="text" name="Sector" required>
+                                                <input type="text" name="Sector_Mentor" required>
                                             </label>
                                         </div>
                                         <label>
                                             Interests *
-                                            <input type="text" name="interests" required>
+                                            <input type="text" name="interests_Mentor" required>
                                         </label>
                                         <label>
                                             Profile Picture
@@ -240,12 +240,12 @@
                                         </label>
                                         <div class="two-cols">
                                             <label for="compnyLogo">Is this Company logo</label>
-                                            <select name="compnyLogo" id="compnyLogo">
+                                            <select name="compnyLogo_Mentor" id="compnyLogo">
                                                 <option value="no">No</option>
                                                 <option value="yes">Yes</option>
                                             </select>
                                             <label for="startupStage">Stage of Startup *</label>
-                                            <select name="startupStage" id="startupStage" required>
+                                            <select name="startupStage_Mentor" id="startupStage" required>
                                                 <option value="ideation">ideation</option>
                                                 <option value="validation">validation</option>
                                                 <option value="early traction">Early Traction</option>
@@ -253,18 +253,18 @@
                                             </select>
                                         </div>
                                         <label for="network">Select your Network *</label>
-                                        <select name="network" id="network" required>
+                                        <select name="network_Mentor" id="network" required>
                                             <option value="tie">TIE</option>
                                             <option value="others">Others</option>
                                         </select>
                                         <div class="two-cols">
                                             <label>
                                                 TIE Email address
-                                                <input type="email" name="tieEmail">
+                                                <input type="email" name="tieEmail_Mentor">
                                             </label>
                                             <label>
                                                 TIE Password
-                                                <input type="text" name="tiePassword">
+                                                <input type="text" name="tiePassword_Mentor">
                                             </label>
                                         </div>
                                         <label> Success Stories (if any) </label>
@@ -272,16 +272,16 @@
 
                                             <label>
                                                 Startup Name
-                                                <input type="text" name="startup Name">
+                                                <input type="text" name="startupName_Mentor">
                                             </label>
                                             <label>
                                                 Startup URL
-                                                <input type="text" name="startup URL">
+                                                <input type="text" name="startupURL_Mentor">
                                             </label>
                                         </div>
                                         <label>
                                             Brief / Tagline
-                                            <input type="text" name="briefTagline">
+                                            <input type="text" name="briefTagline_Mentor">
                                         </label>
 
                                     </fieldset>
@@ -318,7 +318,8 @@
                                         <div class="two-cols">
                                             <label>
                                                 StartUp Email address * [can't change]
-                                                <input type="email" name="email_StartUp" id="startupUserEmail" required>
+                                                <input type="email" name="email_StartUp" id="startupUserEmail" required
+                                                    readonly>
                                             </label>
 
                                             <label>
@@ -573,11 +574,11 @@
     <script src="../js/main.js"></script>
     <!-- <script type="module" src="../Registration.html"></script>
     <script type="module" src="../js/Registration.js/Startup.js"></script> -->
-    <script>
 
-    </script>
     <!-- edit js connection -->
     <script type="module" src="../js/Admin.js/Edit.js"></script>
+
+    <script type="module" src="../js/Registration.js/Mentor.js"></script>
     <script src="../js/Registration.js/Startup.js"></script>
 </body>
 
