Minor changes to user panel

--- a/userPanel/startupPanel/index.html
+++ b/userPanel/startupPanel/index.html
@@ -128,7 +128,7 @@
                         <input class="btnChangeCard" type="reset" name="colorRadio" value="Message">
                     </li>
                     <li class="nav-item">
-                        <input class="btnChangeCard" type="button" name="colorRadio" value="Logout">
+                        <input class="btnChangeCard" type="button" value="Logout">
                             <i class="fa fa-sign-out" aria-hidden="true"></i>
                     </li>
                 </ul>
@@ -142,7 +142,7 @@
                 <div class="card-header pb-0 p-3">
                     <div class="row">
                         <div class="col-md-8 d-flex align-items-center">
-                            <h6 class="mb-0">Startup Information</h6>
+                            <h6 class="mb-0">Startup Information/Brief</h6>
                         </div>
                     </div>
                 </div>
@@ -195,6 +195,7 @@
                             </div>
                             <div class="d-flex align-items-start flex-column justify-content-center">
                                 <h6 class="mb-0 text-sm">Mentor Name</h6>
+                                <p class="text-xxs">Unique ID</p>
                                 <p class="mb-0 text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                     Ratione, iste voluptatibus error quasi architecto cumque voluptates sint fugiat nemo
                                     distinctio labore minima deserunt ipsa aspernatur assumenda repellat accusamus,
@@ -211,6 +212,7 @@
                             </div>
                             <div class="d-flex align-items-start flex-column justify-content-center">
                                 <h6 class="mb-0 text-sm">Admin</h6>
+                                <p class="text-xxs">Unique ID</p>
                                 <p class="mb-0 text-xs">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure
                                     facere praesentium vitae consequuntur nostrum ducimus architecto necessitatibus
                                     ipsam sunt quos molestiae exercitationem corporis ipsum dicta nisi ab rerum, ad
@@ -227,6 +229,7 @@
                             </div>
                             <div class="d-flex align-items-start flex-column justify-content-center">
                                 <h6 class="mb-0 text-sm">Other Mentor Name</h6>
+                                <p class="text-xxs">Unique ID</p>
                                 <p class="mb-0 text-xs">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
                                     rerum fugiat repudiandae voluptates commodi placeat, eius doloremque quisquam eos
                                     facilis perspiciatis corrupti modi quasi laboriosam eum tempora reprehenderit
@@ -739,33 +742,29 @@
                                         <th data-field="salary" data-sortable="true">Status</th>
                                         <th data-field="contact" data-sortable="true">Phone</th>
                                         <th data-field="email">Email</th>
-                                        <th data-field="mentor name">startup name</th>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>1</td>
+                                            <td>M0001</td>
                                             <td>Dakota Rice</td>
-                                            <td>Active</td>
+                                            <td>Available</td>
                                             <td>98765321</td>
                                             <td>cake@gmail.com</td>
-                                            <td>Oud-Turnhout</td>
                                             <td></td>
                                         </tr>
                                         <tr>
-                                            <td>2</td>
+                                            <td>M0002</td>
                                             <td>Minerva Hooper</td>
-                                            <td>Deactive</td>
-                                            <td>Curaçao</td>
-                                            <td>Sinaai-Waas</td>
+                                            <td>Not Available</td>
+                                            <td>987654321</td>
                                             <td>Sinaai-Waas</td>
                                             <td></td>
                                         </tr>
                                         <tr>
                                             <td>3</td>
                                             <td>Sage Rodriguez</td>
-                                            <td>Active</td>
+                                            <td>Available</td>
                                             <td>Netherlands</td>
-                                            <td>Baileux</td>
                                             <td>Baileux</td>
                                             <td></td>
                                         </tr>
@@ -774,7 +773,6 @@
                                             <td>Philip Chaney</td>
                                             <td>$38,735</td>
                                             <td>Korea, South</td>
-                                            <td>Overland Park</td>
                                             <td>Overland Park</td>
                                             <td></td>
                                         </tr>
