--- a/userPanel/mentorPanel/index.html
+++ b/userPanel/mentorPanel/index.html
@@ -55,7 +55,7 @@
             margin-left: 1rem;
             padding: 1rem;
         }
-        .Dashboard, .Inbox, .Settings, .AddDetails, .Services, .ScheduleMeeting, .MentorList, .Message{
+        .Dashboard, .Inbox, .Settings, .AddDetails, .Services, .ScheduleMeeting, .StartupList, .Message{
             -webkit-filter: drop-shadow( 5px 5px 5px rgba(56, 53, 53, 0.72));
             filter: drop-shadow(5px 5px 5px 5px rgb(59, 57, 57));
         }
@@ -122,7 +122,7 @@
                         <input class="btnChangeCard" type="reset" name="colorRadio" value="ScheduleMeeting">
                     </li>
                     <li class="nav-item">
-                        <input class="btnChangeCard" type="reset" name="colorRadio" value="MentorList">
+                        <input class="btnChangeCard" type="reset" name="colorRadio" value="StartupList">
                     </li>
                     <li class="nav-item">
                         <input class="btnChangeCard" type="reset" name="colorRadio" value="Message">
@@ -737,12 +737,12 @@
 
             </div>
 
-            <div class="wrapper MentorList box">
+            <div class="wrapper StartupList ">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
                             <div class="description">
-                                <h2>Mentor List</h2>
+                                <h2>Startup List</h2>
                             </div>
 
                             <div class="fresh-table full-color-azure">
@@ -754,14 +754,14 @@
                                 <table id="fresh-table" class="table">
                                     <thead>
                                         <th data-field="id" data-sortable="true">ID</th>
-                                        <th data-field="name" data-sortable="true">Mentor Name</th>
+                                        <th data-field="name" data-sortable="true">Startup Name</th>
                                         <th data-field="salary" data-sortable="true">Status</th>
                                         <th data-field="contact" data-sortable="true">Phone</th>
                                         <th data-field="email">Email</th>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>M0001</td>
+                                            <td>S0001</td>
                                             <td>Dakota Rice</td>
                                             <td>Available</td>
                                             <td>98765321</td>
@@ -769,7 +769,7 @@
                                             <td></td>
                                         </tr>
                                         <tr>
-                                            <td>M0002</td>
+                                            <td>S0002</td>
                                             <td>Minerva Hooper</td>
                                             <td>Not Available</td>
                                             <td>987654321</td>
