--- a/admin/mentor.html
+++ b/admin/mentor.html
@@ -99,7 +99,7 @@
           <div class="row">
             <div class="col-md-8 col-md-offset-2">
               <div class="description">
-                <h2>Startup List</h2>
+                <h2>Mentor List</h2>
               </div>
     
               <div class="fresh-table full-color-azure">
