--- a/userPanel/mentorPanel/index.html
+++ b/userPanel/mentorPanel/index.html
@@ -737,7 +737,7 @@
 
             </div>
 
-            <div class="wrapper StartupList ">
+            <div class="wrapper StartupList box">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
